<resources>
    <string name="app_name">ManejoPersonas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preferencias">Preferencias</string>
    <string name="listado">Listado</string>
    <string name="otra_pagina">Otra pagina</string>
    <string name="comunicaciones">Comunicaciones</string>
    <string name="utilidades">Utilidades</string>
    <string name="guardar_en_archivo">Guardar en archivo XML</string>
    <string name="nombre">Nombre</string>
    <string name="cedula">Cedula</string>
    <string name="fecha">Fecha</string>
    <string name="estatura">Estatura</string>
    <string name="genero">Genero</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="estado_civil">Estado Civil</string>
    <string name="error_nombre">Nombre en blanco</string>
    <string name="cedula_blanco">Cedula en blanco</string>
    <string name="cedula_incorrecta">Cedula incorrecta</string>
    <string name="estatura_invalida">Estatura invalida</string>
    <string name="cambiar_orden">Cambiar ordenamiento</string>
    <string name="advertencia">ADVERTENCIA</string>
    <string name="advertencia_borrar_registro">¿ Desea borrar el registro ?</string>
    <string name="titulo_listado">Listado</string>
    <string name="titulo_menu_contextual">OPCIONES</string>
    <string name="opcion_eliminar">Eliminar</string>
    <string name="pref_title_lectura">Lectura</string>
    <string name="pref_summ_lectura">Lectura automatica de los registros de la base de datos</string>
    <string name="pref_title_guardado">Guardado</string>
    <string name="pref_summ_guardado">Guardado automatico en un archivo de objetos binarios</string>
    <string name="pref_title_archivo">Archivo de datos</string>
    <string name="pref_summ_archivo">Nombre del archivo binario para guardar la lista</string>
    <string name="pref_dia_title_archivo">Diga el nombre del archivo</string>
    <string name="pref_cat_ordenamiento">Ordenamientos</string>
    <string name="pref_title_ordenamiento_selectivo">Ordenar por criterios</string>
    <string name="pref_summ_ordenamiento_selectivo">Establecer ordenamiento segun criterio seleccionado</string>
    <string name="pref_summ_criterios_ordenamiento">Atributos del objeto persona para ser usado como criterio de ordenamiento</string>
    <string name="pref_title_criterio_ordenamientos">Criterios</string>
    <string name="pref_dia_title_criterios_ordenamientos">Escoja un criterio para ordenar</string>
    <string name="pref_cat_archivo">Archivo</string>
    <string name="presione_de_nuevo">Presione de nuevo para salir</string>
    <string name="titulo_activity_preferencias">Preferencias</string>
    <string name="snack_borrado_titulo">Borrado</string>
    <string name="snack_restaurar_titulo">Restaurar</string>
    <string name="toast_restaurado">Restaurado</string>
    <string name="boton_si">Si</string>
    <string name="boton_no">No</string>
    <string name="hola_fragmento_3">Hola FRAGMENTO 3</string>
    <string name="mostrar_objetos">Mostrar Objetos</string>
    <string name="mostar_objetos_titulo">Mostrar objetos serializados</string>
    <string name="cedula_registrada">Cedula ya esta registrada</string>
    <string name="terminado">Terminado</string>
    <string name="leer_webservice">Leer datos de webservice</string>
    <string name="leyendo_espere">LEYENDO ESPERE ...</string>
    <string name="operacion_cancelada">Operacion cancelada</string>
    <string name="pref_cat_comunicaciones">Comunicaciones</string>
    <string name="pref_dia_title_hostname">Nombre o IP del servidor con puerto\n (Sin http://)</string>
    <string name="pref_summ_hostname">Servidor para webservice SOAP (Glassfish)</string>
    <string name="pref_summ_hostname_rest">Servidor para webservice REST (PHP/Slim/Eloquent/JWT)</string>
    <string name="pref_title_hostname">Servidor SOAP</string>
    <string name="pref_title_hostname_rest">Servidor REST </string>
    <string name="leer_rest">Leer RESTfull</string>
    <string name="lectura">Lectura</string>
    <string name="pref_title_connect_timeout">Tiempo Conexion</string>
    <string name="pref_sum_connect_timeout">Tiempo maximo de espera para conexion</string>
    <string name="pref_dia_connect_timeout">Tiempo (seg)</string>
    <string name="pref_title_read_timeout">Tiempo Lectura</string>
    <string name="pref_sum_read_timeout">Tiempo maximo para establecer la lectura</string>
    <string name="pref_dia_read_timeout">Tiempo (seg)</string>
    <string name="mapa">Ver Mapa</string>
    <string name="cambiar_tipo_mapa">Cambiar tipo</string>
    <string name="adicionar_lugares">Adicionar lugares</string>
    <string name="seleccione_tipo_mapa">Seleccione el tipo</string>
    <string name="cargando_mapa">Cargando Mapa...</string>
    <string name="espere">Espere ....</string>
    <string name="clean_m">Limpiar</string>
    <string name="autor">\@JJSC, 2018</string>
    <string name="ejemplo_de_clases_manejo_de_personas">Ejemplo de Clases\nMANEJO DE PERSONAS\nMódulos 1 y 2</string>
    <string name="hostname_rest_label">Servidor REST con JWT</string>
</resources>
